INT-11862: Adding styles for fixing right float of search box

--- a/styles.css
+++ b/styles.css
@@ -924,3 +924,13 @@ the use of id^="" */
     padding-top: 0.5em;
     margin-top: 0.5em;
 }
+
+/* Additional styles for right alignment. */
+.forumsearch {
+    float: right;
+}
+
+#searchforums {
+    margin: auto;
+}
+
