INT-12946: Correct display of Hsu forums titles in big screens for more and clean themes

--- a/styles.css
+++ b/styles.css
@@ -625,6 +625,10 @@ FUN WITH FORMS
         width: 50%;
         float: left;
     }
+
+    .section .activity.hsuforum.modtype_hsuforum .activityinstance > a {
+        display: block;
+    }
 }
 
 @media (max-width:53em) and (min-width:48em) {
