INT-14659: Advanced grading appears now in the main page of hsuforum

--- a/styles.css
+++ b/styles.css
@@ -926,3 +926,7 @@ the use of id^="" */
     display: inline-block;
     mix-blend-mode: difference;
 }
+
+#page-mod-hsuforum-view #hsuforum_gradingcriteria {
+    margin-top: 0.5em;
+}
