INT-18340: Fix for Open forums add new discussion and missing aria label with course TOC at top - Clean some behat tests for Snap

--- a/styles.css
+++ b/styles.css
@@ -986,3 +986,8 @@ the use of id^="" */
     pointer-events: none;
     transition: all .2s ease-in-out;
 }
+
+/** Give some space at the top of the notification after adding a discussion. **/
+#page-mod-hsuforum-view .hsuforum-notification {
+    margin-top: 0.5em;
+}
