INT-18487: Render the new icons for Snap 4.0 sitewide (Course, front page and blocks)

--- a/styles.css
+++ b/styles.css
@@ -1041,3 +1041,14 @@ div.hsuforum-reply-wrapper form fieldset div.hsuforum-post-figure span.useriniti
     width: 75px;
     height: 75px;
 }
+
+/** Icon color for the activities. **/
+li.activity.modtype_hsuforum .activityiconcontainer,
+.modchoosercontainer div[data-internal="hsuforum"] .modicon_hsuforum {
+    background-color: #8bc34a;
+}
+
+li.activity.modtype_hsuforum .activityiconcontainer img.activityicon,
+.modchoosercontainer div[data-internal="hsuforum"] .modicon_hsuforum img.activityicon {
+    filter: brightness(0) invert(1);
+}
