--- a/styles.css
+++ b/styles.css
@@ -1011,6 +1011,11 @@ body:not(.theme_snap) li.modtype_hsuforum .afterlink .hsuforum-recent .snap-medi
     float: left;
 }
 
+body:not(.theme_snap) li.modtype_hsuforum .activity-item .activity-basis .activity-info {
+    padding-top: 1rem;
+    padding-left: 0;
+}
+
 div.hsuforum-thread-header > div.hsuforum-thread-meta > div.hsuforum-thread-participants > span,
 div.hsuforum-post-body > .hsuforum-post-byline > span {
     width: 2rem;
