--- a/templates/big_search_form.mustache
+++ b/templates/big_search_form.mustache
@@ -162,7 +162,7 @@
             <tr>
                 <td colspan="2" class="submit">
                     <div class="text-center">
-                        <input type="submit" value={{#quote}}{{#str}}searchforums, hsuforum{{/str}}{{/quote}}>
+                        <input type="submit" value={{#cleanstr}}searchforums, hsuforum{{/cleanstr}}>
                     </div>
                 </td>
             </tr>
