--- a/styles.css
+++ b/styles.css
@@ -1061,7 +1061,10 @@ div.hsuforum-reply-wrapper form fieldset div.hsuforum-post-figure span.useriniti
 }
 
 /** Icon color for the activities. **/
-li.activity.modtype_hsuforum .activityiconcontainer,
-.modchoosercontainer div[data-internal="hsuforum"] .modicon_hsuforum {
+li.activity.modtype_hsuforum .activityiconcontainer {
     filter: invert(64%) sepia(56%) saturate(361%) hue-rotate(41deg) brightness(98%) contrast(93%);
+}
+
+.modchoosercontainer div[data-internal="hsuforum"] .modicon_hsuforum img {
+    height: 25px;
 }
